# steel-golem

./: .gitignore  .gitmodules  CONTEXT.md  README.md  config.yaml.example  install.sh  pyproject.toml
agents/: steel-golem.md
docs/: roadmap.md
docs/adr/: 001-scaffold-cli.md  002-steel-golem-home-directory.md  003-import-adventure-orchestration.md  004-entity-creation-architecture.md
docs/prd/: entity-creation-and-adventure-import.md  steel-golem-prd.md
skills/adventure-overview/: SKILL.md
skills/adventures-new/: SKILL.md
skills/adventures-set/: SKILL.md
skills/campaigns-new/: SKILL.md
skills/create-entity/: SKILL.md
skills/create-entity/references/: downtime-project.md  encounter-combat.md  encounter-montage.md  encounter-negotiation.md  faction.md  handout.md  location.md  notable-item.md  npc.md  subplot.md  villain.md
skills/entity-schemas/: downtime-project.md  encounter-combat.md  encounter-montage.md  encounter-negotiation.md  faction.md  handout.md  location.md  notable-item.md  npc.md  subplot.md  villain.md
skills/import-adventure/: SKILL.md
skills/rules-reference/: SKILL.md
src/steel_golem/: cli.py  entities.py  scaffold.py
tests/: test_cli.py  test_entities.py  test_install.py  test_scaffold.py
tools/: build_rules_index.py
