[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "steel-golem"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click",
    "python-frontmatter",
]

[project.scripts]
steel-golem = "steel_golem.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/steel_golem"]

[tool.pytest.ini_options]
testpaths = ["tests"]
